Habit add and list view
