# Frontend/frontend-spa-app/swagger/swagger.json
@@ -49,7 +49,33 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetHabitsListQueryResponse"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetHabitsListQueryResponse"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/GetHabitsListQueryResponse"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -195,6 +221,34 @@
           },
           "description": {
             "type": "string"
+          }
+        }
+      },
+      "GetHabitsListQueryResponse": {
+        "required": [
+          "positive",
+          "name",
+          "active",
+          "description",
+          "createdAt"
+        ],
+        "type": "object",
+        "properties": {
+          "positive": {
+            "type": "boolean"
+          },
+          "name": {
+            "type": "string"
+          },
+          "active": {
+            "type": "boolean"
+          },
+          "description": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
